sos/include/sos/sos.h

/** \defgroup cont SOS Containers
 * @{
 */

/** \defgroup cont_types Container Types
 * @{
 */
typedef struct sos_container_s *sos_t;
typedef enum sos_perm_e {
	SOS_PERM_RD = ODS_PERM_RD,
	SOS_PERM_WR = ODS_PERM_WR,
	SOS_PERM_RW = ODS_PERM_RW,
	SOS_PERM_CREAT = ODS_PERM_CREAT,
	SOS_BE_MMOS = ODS_BE_MMAP,
	SOS_BE_LSOS = ODS_BE_LSOS,
	SOS_PERM_USER = 512
} sos_perm_t;
/**
 * \brief Specifies whether to commit synchronously or asynchronously
 */
typedef enum sos_commit_e {
	/** Returns immediately, the sync to storage will be completed
	 *  asynchronously */
	SOS_COMMIT_ASYNC,
	/** Does not return until the sync is complete */
	SOS_COMMIT_SYNC
} sos_commit_t;
/** @} */

/** \defgroup schema SOS Schema
 * @{
 */

/** \defgroup schema_types Schema Types
 * @{
 */
typedef struct sos_attr_s *sos_attr_t;
typedef struct sos_index_s *sos_index_t;
typedef struct sos_schema_s *sos_schema_t;
typedef struct sos_obj_s *sos_obj_t;
typedef enum sos_type_e {
	/** All types up to the arrays are fixed size */
	SOS_TYPE_INT16 = 0,
	SOS_TYPE_FIRST = SOS_TYPE_INT16,
	SOS_TYPE_INT32,
	SOS_TYPE_INT64,
	SOS_TYPE_UINT16,
	SOS_TYPE_UINT32,
	SOS_TYPE_UINT64,
	SOS_TYPE_FLOAT,
	SOS_TYPE_DOUBLE,
	SOS_TYPE_LONG_DOUBLE,
	SOS_TYPE_TIMESTAMP,
	SOS_TYPE_OBJ,
	SOS_TYPE_STRUCT,
	SOS_TYPE_JOIN,
	SOS_TYPE_BYTE_ARRAY = 32,
	SOS_TYPE_ARRAY = SOS_TYPE_BYTE_ARRAY,
	SOS_TYPE_CHAR_ARRAY,
	SOS_TYPE_STRING = SOS_TYPE_CHAR_ARRAY,
	SOS_TYPE_INT16_ARRAY,
	SOS_TYPE_INT32_ARRAY,
	SOS_TYPE_INT64_ARRAY,
	SOS_TYPE_UINT16_ARRAY,
	SOS_TYPE_UINT32_ARRAY,
	SOS_TYPE_UINT64_ARRAY,
	SOS_TYPE_FLOAT_ARRAY,
	SOS_TYPE_DOUBLE_ARRAY,
	SOS_TYPE_LONG_DOUBLE_ARRAY,
	SOS_TYPE_OBJ_ARRAY,
	SOS_TYPE_LAST = SOS_TYPE_OBJ_ARRAY
} sos_type_t;
typedef ods_idx_data_t sos_idx_data_t;
typedef union sos_obj_ref_s {
	ods_idx_data_t idx_data;
	struct sos_idx_ref_s {
		uuid_t part_uuid;	/* The reference to the ODS */
		ods_ref_t obj;		/* The object reference */
	} ref;
	struct dsos_ref_s {
		u_long cont_id;
		u_long client_id;
		u_long part_id;
		u_long schema_id;
		ods_ref_t obj_ref;
	} dsos_ref;
} sos_obj_ref_t;
typedef union sos_value_data_u {
	union sos_primary_u prim;
	union sos_array_element_u struc;
	struct sos_array_info_s array_info;
	struct sos_array_s array;
	struct sos_array_s join;
	char __pad[256];
} *sos_value_data_t;
/*! Describes the value of an attribute in an object */
typedef struct sos_value_s {
	sos_obj_t obj;		/*! The object to which the value refers  */
	sos_type_t type;	/*! The value type, used when attr is NULL, i.e. this is a constant */
	sos_attr_t attr;	/*! The attribute in the object */
	sos_value_data_t data;	      /*! Points at data_ or into obj */
	union sos_value_data_u data_; /*! Memory based value data */
} *sos_value_t;
enum sos_cond_e {
	SOS_COND_LT,
	SOS_COND_LE,
	SOS_COND_EQ,
	SOS_COND_GE,
	SOS_COND_GT,
	SOS_COND_NE,
};
typedef enum sos_cond_e sos_cond_t;
typedef enum sos_part_state_e {
	/** Partition is not being used */
	SOS_PART_STATE_OFFLINE = 0,
	/** Consulted for queries/iteration */
	SOS_PART_STATE_ACTIVE = 1,
	/** New objects stored here */
	SOS_PART_STATE_PRIMARY = 2,
	/** Partition is undergoing state change  */
	SOS_PART_STATE_BUSY = 3,
	/** Detached */
	SOS_PART_STATE_DETACHED = 4
} sos_part_state_t;
/** @} */

/** \defgroup indices SOS Indices
 * @{
 */
/** \defgroup index_types Index Types
 * @{
 */
typedef struct sos_index_stat_s {
	uint64_t cardinality;
	uint64_t duplicates;
	uint64_t size;
} *sos_index_stat_t;
/** @} */
/** \defgroup index_funcs Index Functions
 * @{
 */
typedef struct ods_obj_s *sos_key_t;
typedef enum sos_visit_action {
	SOS_VISIT_ADD = ODS_VISIT_ADD,	/*! Add the key and set its data to idx_data */
	SOS_VISIT_DEL = ODS_VISIT_DEL,	/*! Delete the key */
	SOS_VISIT_UPD = ODS_VISIT_UPD,	/*! Update the index data for key */
	SOS_VISIT_NOP = ODS_VISIT_NOP	/*! Do nothing */
} sos_visit_action_t;
typedef sos_visit_action_t (*sos_visit_cb_fn_t)(sos_index_t index,
						sos_key_t key, sos_idx_data_t *idx_data,
						int found,
						void *arg);
sos_obj_t sos_obj_find(sos_attr_t attr, sos_key_t key);
int sos_index_new(sos_t sos, const char *name,
		  const char *idx_type, const char *key_type,
		  const char *args);
sos_index_t sos_index_open(sos_t sos, const char *name);
int sos_index_insert(sos_index_t index, sos_key_t key, sos_obj_t obj);
int sos_index_remove(sos_index_t index, sos_key_t key, sos_obj_t obj);
int sos_index_visit(sos_index_t index, sos_key_t key, sos_visit_cb_fn_t cb_fn, void *arg);
sos_obj_t sos_index_find(sos_index_t index, sos_key_t key);
sos_obj_t sos_index_find_inf(sos_index_t index, sos_key_t key);
sos_obj_t sos_index_find_sup(sos_index_t index, sos_key_t key);
sos_obj_t sos_index_find_ge(sos_index_t index, sos_key_t key);
sos_obj_t sos_index_find_le(sos_index_t index, sos_key_t key);
sos_obj_t sos_index_find_min(sos_index_t index, sos_key_t *pkey);
sos_obj_t sos_index_find_max(sos_index_t index, sos_key_t *pkey);
int sos_index_commit(sos_index_t index, sos_commit_t flags);
int sos_index_close(sos_index_t index, sos_commit_t flags);
size_t sos_index_key_size(sos_index_t index);
sos_key_t sos_index_key_new(sos_index_t index, size_t size);
int sos_index_key_from_str(sos_index_t index, sos_key_t key, const char *str);
const char *sos_index_key_to_str(sos_index_t index, sos_key_t key);
int64_t sos_index_key_cmp(sos_index_t index, sos_key_t a, sos_key_t b);
void sos_index_print(sos_index_t index, FILE *fp);
const char *sos_index_name(sos_index_t index);
int sos_index_stat(sos_index_t index, sos_index_stat_t sb);
int sos_index_verify(sos_index_t index, FILE *fp, int verbose);
typedef struct sos_container_index_iter_s {
	sos_t sos;
	ods_iter_t iter;
} *sos_container_index_iter_t;
void sos_container_index_list(sos_t sos, FILE *fp);
typedef struct sos_container_index_iter_s *sos_container_index_iter_t;
sos_container_index_iter_t sos_container_index_iter_new(sos_t sos);
void sos_container_index_iter_free(sos_container_index_iter_t iter);
sos_index_t sos_container_index_iter_first(sos_container_index_iter_t iter);
sos_index_t sos_container_index_iter_next(sos_container_index_iter_t iter);
/** @} */
/** @} */

/** \defgroup keys SOS Keys
 * @{
 */

typedef struct sos_comp_key_spec {
	sos_type_t type;
	sos_value_data_t data;
} *sos_comp_key_spec_t;
sos_key_t sos_key_new(size_t sz);
void sos_key_put(sos_key_t key);
size_t sos_key_set(sos_key_t key, void *value, size_t sz);
char *sos_key_to_str(sos_key_t key, const char *fmt, const char *sep, size_t el_sz);
int sos_comp_key_set(sos_key_t key, size_t len, sos_comp_key_spec_t key_spec);
sos_comp_key_spec_t sos_comp_key_get(sos_key_t key, size_t *len);
size_t sos_comp_key_size(size_t len, sos_comp_key_spec_t key_spec);
size_t sos_key_size(sos_key_t key);
size_t sos_key_len(sos_key_t key);
unsigned char *sos_key_value(sos_key_t key);
void *sos_value_as_key(sos_value_t value);
int sos_attr_key_from_str(sos_attr_t attr, sos_key_t key, const char *str);
const char *sos_attr_key_to_str(sos_attr_t attr, sos_key_t key);
sos_key_t sos_attr_key_new(sos_attr_t attr, size_t len);
int sos_attr_key_cmp(sos_attr_t attr, sos_key_t a, sos_key_t b);
size_t sos_attr_key_size(sos_attr_t attr);
/** @} */
/** @} */

/** \defgroup iter SOS Iterators
 * @{
 */
/** \defgroup iter_types Iterator Types
 * @{
 */
typedef struct sos_iter_s *sos_iter_t;
typedef uint32_t sos_pos_t;
typedef enum sos_iter_flags_e {
	SOS_ITER_F_ALL = ODS_ITER_F_ALL,
	/** The iterator will skip duplicate keys in the index */
	SOS_ITER_F_UNIQUE = ODS_ITER_F_UNIQUE,
	SOS_ITER_F_INF_LAST_DUP = ODS_ITER_F_GLB_LAST_DUP,
	SOS_ITER_F_SUP_LAST_DUP = ODS_ITER_F_LUB_LAST_DUP,
	SOS_ITER_F_MASK = ODS_ITER_F_MASK
} sos_iter_flags_t;
typedef struct sos_filter_cond_s *sos_filter_cond_t;
typedef struct sos_filter_s *sos_filter_t;
/** @} */
/** \defgroup iter_funcs Iterator Functions
 * @{
 */
sos_iter_t sos_index_iter_new(sos_index_t index);
sos_iter_t sos_attr_iter_new(sos_attr_t attr);
void sos_iter_free(sos_iter_t iter);
int64_t sos_iter_key_cmp(sos_iter_t iter, sos_key_t a_key, sos_key_t b_key);
int sos_iter_find(sos_iter_t iter, sos_key_t key);
int sos_iter_find_first(sos_iter_t iter, sos_key_t key);
int sos_iter_find_last(sos_iter_t iter, sos_key_t key);
int sos_iter_inf(sos_iter_t i, sos_key_t key);
int sos_iter_sup(sos_iter_t i, sos_key_t key);
int sos_iter_find_le(sos_iter_t i, sos_key_t key);
int sos_iter_find_ge(sos_iter_t i, sos_key_t key);
int sos_iter_flags_set(sos_iter_t i, sos_iter_flags_t flags);
sos_iter_flags_t sos_iter_flags_get(sos_iter_t i);
uint64_t sos_iter_card(sos_iter_t i);
uint64_t sos_iter_dups(sos_iter_t i);
int sos_iter_next(sos_iter_t iter);
int sos_iter_prev(sos_iter_t i);
int sos_iter_begin(sos_iter_t i);
int sos_iter_end(sos_iter_t i);
sos_key_t sos_iter_key(sos_iter_t iter);
sos_obj_t sos_iter_obj(sos_iter_t iter);
sos_obj_ref_t sos_iter_ref(sos_iter_t iter);
int sos_iter_entry_remove(sos_iter_t iter);
sos_filter_t sos_filter_new(sos_iter_t iter);
void sos_filter_free(sos_filter_t f);
int sos_filter_cond_add(sos_filter_t f, sos_attr_t attr,
			enum sos_cond_e cond_e, sos_value_t value);
sos_obj_t sos_filter_begin(sos_filter_t filt);
sos_obj_t sos_filter_next(sos_filter_t filt);
sos_obj_t sos_filter_prev(sos_filter_t filt);
sos_obj_t sos_filter_end(sos_filter_t filt);
int sos_filter_miss_count(sos_filter_t filt);
sos_obj_t sos_filter_obj(sos_filter_t filt);
int sos_filter_flags_set(sos_filter_t filt, sos_iter_flags_t flags);
sos_iter_flags_t sos_filter_flags_get(sos_filter_t filt);