sos/src/sos_priv.h

typedef int (*sos_filter_fn_t)(sos_value_t a, sos_value_t b, int *ret);
struct sos_filter_cond_s {
	sos_attr_t attr;
	struct sos_value_s value_;
	sos_value_t value;
	sos_iter_t iter;
	sos_filter_fn_t cmp_fn;
	enum sos_cond_e cond;
	int ret;
	TAILQ_ENTRY(sos_filter_cond_s) entry;
};
struct sos_filter_s {
	sos_iter_t iter;
	SOS_KEY_VALUE(last_match_key);
	struct ods_obj_s last_match_obj;
	sos_key_t last_match;
	int miss_cnt;
	TAILQ_HEAD(sos_cond_list, sos_filter_cond_s) cond_list;
};
typedef struct ods_iter_ref_s {
	ods_iter_t iter;
	LIST_ENTRY(ods_iter_ref_s) entry;
} *ods_iter_ref_t;
typedef struct ods_iter_obj_ref_s {
	ods_iter_t iter;
	sos_obj_ref_t ref;
	sos_part_t part;
	ods_key_t key;
	struct ods_rbn rbn;
} *ods_iter_obj_ref_t;
typedef struct sos_iter_s {
	sos_attr_t attr;	/* !NULL if this iterator is associated with an attribute */
	sos_index_t index;
	/* One iterator per ODS index in index */
	LIST_HEAD(ods_iter_list_head, ods_iter_ref_s) iter_list;
	/* Current iterator position */
	ods_iter_obj_ref_t pos;
	/* Objects inserted from each iterator */
	struct ods_rbt rbt;
} *sos_iter_t;