sos/python/Sos.pxd


    ctypedef sos_visit_action_t (*sos_visit_cb_fn_t)(sos_index_t index,
                                                     sos_key_t key, sos_idx_data_t *idx_data,
                                                     int found,
                                                     void *arg)
    sos_obj_t sos_obj_find(sos_attr_t attr, sos_key_t key)
    int sos_index_new(sos_t sos, const char *name,
                      const char *idx_type, const char *key_type,
                      const char *args)
    sos_index_t sos_index_open(sos_t sos, const char *name)
    int sos_index_insert(sos_index_t index, sos_key_t key, sos_obj_t obj)
    int sos_index_remove(sos_index_t index, sos_key_t key, sos_obj_t obj)
    int sos_index_visit(sos_index_t index, sos_key_t key, sos_visit_cb_fn_t cb_fn, void *arg)
    sos_obj_t sos_index_find(sos_index_t index, sos_key_t key)
    sos_obj_t sos_index_find_inf(sos_index_t index, sos_key_t key)
    sos_obj_t sos_index_find_sup(sos_index_t index, sos_key_t key)
    sos_obj_t sos_index_find_le(sos_index_t index, sos_key_t key)
    sos_obj_t sos_index_find_ge(sos_index_t index, sos_key_t key)
    sos_obj_t sos_index_find_max(sos_index_t index, sos_key_t *pkey)
    sos_obj_t sos_index_find_min(sos_index_t index, sos_key_t *pkey)
    int sos_index_commit(sos_index_t index, sos_commit_t flags)
    int sos_index_close(sos_index_t index, sos_commit_t flags)
    size_t sos_index_key_size(sos_index_t index)
    sos_key_t sos_index_key_new(sos_index_t index, size_t size)
    int sos_index_key_from_str(sos_index_t index, sos_key_t key, const char *str)
    const char *sos_index_key_to_str(sos_index_t index, sos_key_t key)
    int sos_index_key_cmp(sos_index_t index, sos_key_t a, sos_key_t b)
    void sos_index_print(sos_index_t index, FILE *fp)
    int sos_index_verify(sos_index_t index, FILE *fp, int verify)
    const char *sos_index_name(sos_index_t index)
    int sos_index_stat(sos_index_t index, sos_index_stat_t sb)
    void sos_container_index_list(sos_t sos, FILE *fp)

    cdef struct sos_container_index_iter_s:
        pass
    ctypedef sos_container_index_iter_s *sos_container_index_iter_t

    sos_container_index_iter_t sos_container_index_iter_new(sos_t sos)
    void sos_container_index_iter_free(sos_container_index_iter_t iter)
    sos_index_t sos_container_index_iter_first(sos_container_index_iter_t iter)
    sos_index_t sos_container_index_iter_next(sos_container_index_iter_t iter)

    sos_key_t sos_key_new(size_t sz)
    void sos_key_put(sos_key_t key)
    size_t sos_key_set(sos_key_t key, void *value, size_t sz)
    char *sos_key_to_str(sos_key_t key, const char *fmt, const char *sep, size_t el_sz)
    size_t sos_key_size(sos_key_t key)
    size_t sos_key_len(sos_key_t key)
    unsigned char *sos_key_value(sos_key_t key)
    void *sos_value_as_key(sos_value_t value)
    int sos_comp_key_set(sos_key_t key, size_t len, sos_comp_key_spec_t key_spec)
    sos_comp_key_spec_t sos_comp_key_get(sos_key_t key, size_t *len)
    size_t sos_comp_key_size(size_t len, sos_comp_key_spec_t key_spec)

    int sos_attr_key_from_str(sos_attr_t attr, sos_key_t key, const char *str)
    const char *sos_attr_key_to_str(sos_attr_t attr, sos_key_t key)
    sos_key_t sos_attr_key_new(sos_attr_t attr, size_t len)
    int sos_attr_key_cmp(sos_attr_t attr, sos_key_t a, sos_key_t b)
    size_t sos_attr_key_size(sos_attr_t attr)

    cdef struct sos_iter_s:
        pass
    ctypedef sos_iter_s *sos_iter_t
    ctypedef uint32_t sos_pos_t

    cdef enum sos_iter_flags_e:
        SOS_ITER_F_ALL,
        SOS_ITER_F_UNIQUE,
        SOS_ITER_F_INF_LAST_DUP,
        SOS_ITER_F_SUP_LAST_DUP,
        SOS_ITER_F_MASK,
    ctypedef uint64_t sos_iter_flags_t

    cdef struct sos_filter_cond_s:
        pass
    ctypedef sos_filter_cond_s *sos_filter_cond_t
    cdef struct sos_filter_s:
        pass
    ctypedef sos_filter_s *sos_filter_t

    sos_iter_t sos_index_iter_new(sos_index_t index)
    sos_iter_t sos_attr_iter_new(sos_attr_t attr)
    void sos_iter_free(sos_iter_t iter)
    int sos_iter_key_cmp(sos_iter_t iter, sos_key_t other)
    int sos_iter_find(sos_iter_t iter, sos_key_t key)
    int sos_iter_find_first(sos_iter_t iter, sos_key_t key)
    int sos_iter_find_last(sos_iter_t iter, sos_key_t key)
    int sos_iter_inf(sos_iter_t i, sos_key_t key)
    int sos_iter_sup(sos_iter_t i, sos_key_t key)
    int sos_iter_find_le(sos_iter_t i, sos_key_t key)
    int sos_iter_find_ge(sos_iter_t i, sos_key_t key)

    int sos_iter_flags_set(sos_iter_t i, sos_iter_flags_t flags)
    sos_iter_flags_t sos_iter_flags_get(sos_iter_t i)
    uint64_t sos_iter_card(sos_iter_t i)
    uint64_t sos_iter_dups(sos_iter_t i)
    int sos_iter_next(sos_iter_t iter)
    int sos_iter_prev(sos_iter_t i)
    int sos_iter_begin(sos_iter_t i)
    int sos_iter_end(sos_iter_t i)
    sos_key_t sos_iter_key(sos_iter_t iter)
    sos_obj_t sos_iter_obj(sos_iter_t iter)
    sos_obj_ref_t sos_iter_ref(sos_iter_t iter)
    int sos_iter_entry_remove(sos_iter_t iter)

    sos_filter_t sos_filter_new(sos_iter_t iter)
    void sos_filter_free(sos_filter_t f)
    int sos_filter_cond_add(sos_filter_t f, sos_attr_t attr,
                            sos_cond_t cond_e, sos_value_t value)
    sos_obj_t sos_filter_begin(sos_filter_t filt)
    sos_obj_t sos_filter_next(sos_filter_t filt)
    sos_obj_t sos_filter_prev(sos_filter_t filt)
    sos_obj_t sos_filter_end(sos_filter_t filt)
    int sos_filter_miss_count(sos_filter_t filt)
    sos_obj_t sos_filter_obj(sos_filter_t filt)
    int sos_filter_flags_set(sos_filter_t filt, sos_iter_flags_t flags)
    sos_iter_flags_t sos_filter_flags_get(sos_filter_t filt)

cdef extern from "dsos.h":

    cdef enum dsos_error:
        DSOS_ERR_OK,
        DSOS_ERR_MEMORY,
        DSOS_ERR_CLIENT,
        DSOS_ERR_SCHEMA,
        DSOS_ERR_ATTR,
        DSOS_ERR_ITER,
        DSOS_ERR_ITER_EMPTY,
        DSOS_ERR_QUERY_ID,
        DSOS_ERR_QUERY_EMPTY,
        DSOS_ERR_QUERY_BAD_SELECT,
        DSOS_ERR_PARAMETER,
        DSOS_ERR_TRANSPORT

    cdef struct dsos_result_s:
        int count
        dsos_error any_err
        dsos_error res[16]
    ctypedef dsos_result_s dsos_res_t

    cdef struct dsos_container_s:
        pass
    cdef struct dsos_session_s:
        pass
    cdef struct dsos_schema_s:
        pass
    cdef struct dsos_iter_s:
        pass
    cdef struct dsos_query_s:
        pass
    cdef struct dsos_session_s:
        pass
    cdef struct dsos_part_s:
        pass
    ctypedef dsos_session_s *dsos_session_t
    ctypedef dsos_container_s *dsos_container_t
    ctypedef dsos_schema_s *dsos_schema_t
    ctypedef dsos_part_s *dsos_part_t
    ctypedef dsos_iter_s *dsos_iter_t
    ctypedef dsos_query_s *dsos_query_t
    cdef struct dsos_name_array_s:
        int count
        char **names
    ctypedef dsos_name_array_s *dsos_name_array_t

    const char *dsos_last_errmsg()
    const int dsos_last_error()

    void dsos_session_close(dsos_session_t sess)
    dsos_session_t dsos_session_open(const char *config_file)
    void dsos_container_close(dsos_container_t cont)
    void dsos_container_commit(dsos_container_t cont)
    dsos_container_t dsos_container_open(dsos_session_t sess, const char *path, sos_perm_t perm, int mode)
    int dsos_container_error(dsos_container_t cont, const char **err_msg)
    dsos_schema_t dsos_schema_create(dsos_container_t cont, sos_schema_t schema, dsos_res_t *res)
    dsos_name_array_t dsos_schema_query(dsos_container_t cont)
    dsos_schema_t dsos_schema_by_name(dsos_container_t cont, const char *name)
    dsos_schema_t dsos_schema_by_uuid(dsos_container_t cont, uuid_t uuid)
    sos_schema_t dsos_schema_local(dsos_schema_t schema)
    void dsos_schema_print(dsos_schema_t schema, FILE *fp)

    dsos_part_t dsos_part_create(dsos_container_t cont,
    	const char *name, const char *desc, int mode,
	    uid_t uid, gid_t gid, int perm)
    dsos_name_array_t dsos_part_query(dsos_container_t cont)
    void dsos_name_array_free(dsos_name_array_t names)
    dsos_part_t dsos_part_by_name(dsos_container_t cont, const char *name)
    dsos_part_t dsos_part_by_uuid(dsos_container_t cont, const uuid_t uuid)
    const char *dsos_part_name(dsos_part_t part)
    const char *dsos_part_desc(dsos_part_t part)
    const char *dsos_part_path(dsos_part_t part)
    sos_part_state_t dsos_part_state(dsos_part_t part)
    void dsos_part_uuid(dsos_part_t part, uuid_t uuid)
    uid_t dsos_part_uid(dsos_part_t part)
    gid_t dsos_part_gid(dsos_part_t part)
    int dsos_part_perm(dsos_part_t part)
    int dsos_part_state_set(dsos_part_t part, int state)
    int dsos_part_chown(dsos_part_t part, uid_t uid, gid_t gid)
    int dsos_part_chmod(dsos_part_t part, int mode)

    int dsos_schema_attr_count(dsos_schema_t schema)
    sos_attr_t dsos_schema_attr_by_id(dsos_schema_t schema, int attr_id)
    sos_attr_t dsos_schema_attr_by_name(dsos_schema_t schema, const char *name)
    int dsos_transaction_begin(dsos_container_t cont, timespec *ts)
    int dsos_transaction_end(dsos_container_t cont)
    int dsos_obj_create(dsos_container_t cont, dsos_part_t part, dsos_schema_t schema, sos_obj_t obj)
    dsos_iter_t dsos_iter_create(dsos_container_t cont, dsos_schema_t schema, const char *attr_name)
    sos_obj_t dsos_iter_begin(dsos_iter_t iter)
    sos_obj_t dsos_iter_end(dsos_iter_t iter)
    sos_obj_t dsos_iter_next(dsos_iter_t iter)
    sos_obj_t dsos_iter_prev(dsos_iter_t iter)
    sos_obj_t dsos_iter_find_glb(dsos_iter_t iter, sos_key_t key)
    sos_obj_t dsos_iter_find_lub(dsos_iter_t iter, sos_key_t key)
    sos_obj_t dsos_iter_find_le(dsos_iter_t iter, sos_key_t key)
    sos_obj_t dsos_iter_find_ge(dsos_iter_t iter, sos_key_t key)
    sos_obj_t dsos_iter_find(dsos_iter_t iter, sos_key_t key)
    int dsos_attr_value_min(dsos_container_t cont, sos_attr_t attr)
    int dsos_attr_value_max(dsos_container_t cont, sos_attr_t attr)
    dsos_query_t dsos_query_create(dsos_container_t cont)
    void dsos_query_destroy(dsos_query_t query)
    int dsos_query_select(dsos_query_t query, const char *clause)
    const char *dsos_query_errmsg(dsos_query_t query)
    sos_obj_t dsos_query_next(dsos_query_t query)
    sos_schema_t dsos_query_schema(dsos_query_t query)
    void dsos_name_array_free(dsos_name_array_t name)

